Fix: Styling and spacing of options

--- a/attachment/static/css/survey.css
+++ b/attachment/static/css/survey.css
@@ -69,3 +69,7 @@
 .left {
     float: left;
 }
+
+.previous-button{
+    background-color: grey;
+}
